2004-08-15  Mark Kettenis  <kettenis@gnu.org>

	* infptrace.c (child_xfer_memory): Replace PTRACE_XFER_TYPE with
	PTRACE_TYPE_RET.

	* proc-why.c (proc_prettyfprint_why): Fix format string.

	* solib-osf.c (osf_current_sos): Remove unsused label.

	* configure.in: Add <ncurses/ncurses.h> to the list of possible
	curses headers.
	* configure, config.in: Regenerate.	
	* gdb_curses.h [HAVE_NCURSES_NCURSES_H]: Include
	<ncurses/ncurses.h>.

	* config/nm-bsd.h (PTRACE_ARG3_TYPE): Remove define.
	* config/nm-nbsd.h: Update copyright year.
	(PTRACE_ARG3_TYPE): Remove define.

	* sparc-nat.c (fetch_inferior_registers)
	(store_inferior_registers, sparc_xfer_wcookie): 
	Replace PTRACE_ARG3_TYPE with PTRACE_TYPE_ARG3.

	* alphabsd-nat.c (fetch_inferior_registers):
	(store_inferior_registers): Replace PTRACE_ARG3_TYPE with
	PTRACE_TYPE_ARG3.
	* amd64bsd-nat.c (fetch_inferior_registers)
	(store_inferior_registers): Replace PTRACE_ARG3_TYPE with
	PTRACE_TYPE_ARG3.
	* armnbsd-nat.c: Update copyright year.
	(fetch_register, fetch_regs, fetch_fp_register, fetch_fp_regs)
	(store_register, store_regs, store_fp_register, store_fp_regs):
	Replace PTRACE_ARG3_TYPE with PTRACE_TYPE_ARG3.
	* hppabsd-nat.c (fetch_inferior_registers)
	(store_inferior_registers): Replace PTRACE_ARG3_TYPE with
	PTRACE_TYPE_ARG3.
	* i386bsd-nat.c (fetch_inferior_registers)
	(store_inferior_registers, i386bsd_dr_set, i386bsd_dr_get_status):
	Replace PTRACE_ARG3_TYPE with PTRACE_TYPE_ARG3.
	* m68kbsd-nat.c (fetch_inferior_registers)
	(store_inferior_registers): Replace PTRACE_ARG3_TYPE with
	PTRACE_TYPE_ARG3.
	* m88kbsd-nat.c (fetch_inferior_registers)
	(store_inferior_registers): Replace PTRACE_ARG3_TYPE with
	PTRACE_TYPE_ARG3.
	* mipsnbsd-nat.c: Update copyright year.
	(fetch_inferior_registers, store_inferior_registers):
	Replace PTRACE_ARG3_TYPE with PTRACE_TYPE_ARG3.
	* ns32knbsd-nat.c: Update copyright year.
	(fetch_inferior_registers, store_inferior_registers):