@@ -1,5 +1,8 @@
 2004-08-15  Mark Kettenis  <kettenis@gnu.org>
 
+	* linux-nat.c (kill_inferior): Add missing third and fourth
+	arguments to ptrace call.  Don't use PTRACE_ARG3_TYPE.
+
 	* infptrace.c (child_xfer_memory): Replace PTRACE_XFER_TYPE with
 	PTRACE_TYPE_RET.
 
